feat: Implement dynamic LLM model loading, Firebase config storage, and basic input handlers

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "nfty app",
-  "short_name": "nfty app",
+  "name": "aiConnect app",
+  "short_name": "aicx app",
   "lang": "en-US",
   "start_url": ".",
   "display": "standalone",
